--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         
         <link rel="stylesheet" href="styles/main.css">
-        
 
         <!-- build:js scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
@@ -25,7 +24,22 @@
     </head>
 
     <body>
-
+        <div class="container">
+            <header id="header">
+                <h1 class="text-center">Three Aces</h1>
+            </header>
+            <div id="main">
+                <div class="row">
+                    <div class="span6 offset3">
+                        <div id="r1">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <footer id="footer">
+                <p class="text-center">Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
+            </footer>
+        </div>
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
         <!-- endbuild -->
