--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
             <div id="main">
                 <div class="row">
                     <div class="span6 offset3">
+                        <h2 class="text-center">Add a Menu Item</h2>
                         <div id="r1">
                         </div>
                     </div>
