--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,9 @@
             </header>
             <div id="main">
                 <div class="row">
-                    <div class="span6 offset3">
-                        <div id="r1">
-                        </div>
+                    <div class="span5" id="r1">
+                    </div>
+                    <div class="span7" id="r2">
                     </div>
                 </div>
             </div>
