--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,9 @@
             </header>
             <div id="main">
                 <div class="row">
-                    <div class="span5" id="r1">
+                    <div class="span5 offset1" id="r1">
                     </div>
-                    <div class="span7" id="r2">
+                    <div class="span5" id="r2">
                     </div>
                 </div>
             </div>
