--- a/app/index.html
+++ b/app/index.html
@@ -25,20 +25,32 @@
 
     <body>
         <div class="container">
-            <header id="header">
-                <h1 class="text-center">Three Aces</h1>
-            </header>
-            <div id="main">
-                <div class="row">
-                    <div class="span5 offset1" id="r1">
-                    </div>
-                    <div class="span5" id="r2">
+            <div class="row">
+                <div class="span3 offset3">
+                    <header id="header">
+                        <h1>Three Aces</h1>
+                    </header>
+                </div>
+                <div class="span3">
+                    <nav class="text-right" id="nav">
+                    </nav>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span6 offset3">
+                    <div id="main">
                     </div>
                 </div>
             </div>
-            <footer id="footer">
-                <p class="text-center">Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
-            </footer>
+            <div class="row">
+                <div class="span6 offset3">
+                    <footer class="text-center" id="footer">
+                        <p>Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
+                    </footer>
+                </div>
+            </div>
+        </div>
+        <div id="offscreen">
         </div>
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
