added categories module / need to make sure its view re-renders on addition of menu items

--- a/app/index.html
+++ b/app/index.html
@@ -26,28 +26,24 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="span3 offset3">
-                    <header id="header">
-                        <h1>Three Aces</h1>
-                    </header>
-                </div>
-                <div class="span3">
-                    <nav class="text-right" id="nav">
-                    </nav>
-                </div>
+                <header class="text-center" id="header">
+                    <h1>Three Aces</h1>
+                </header>
             </div>
             <div class="row">
-                <div class="span6 offset3">
+                <div class="span3">
+                    <nav id="nav">
+                    </nav>
+                </div>
+                <div class="span9">
                     <div id="main">
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="span6 offset3">
-                    <footer class="text-center" id="footer">
-                        <p>Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
-                    </footer>
-                </div>
+                <footer class="text-center" id="footer">
+                    <p>Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
+                </footer>
             </div>
         </div>
         <div id="offscreen">
