--- a/app/index.html
+++ b/app/index.html
@@ -26,24 +26,28 @@
     <body>
         <div class="container">
             <div class="row">
-                <header class="text-center" id="header">
-                    <h1>Three Aces</h1>
-                </header>
+                <div class="span10 offset1">
+                    <header class="text-center" id="header">
+                        <h1>Three Aces</h1>
+                    </header>
+                </div>
             </div>
             <div class="row">
-                <div class="span3">
+                <div class="span3 offset1">
                     <nav id="nav">
                     </nav>
                 </div>
-                <div class="span9">
+                <div class="span7">
                     <div id="main">
                     </div>
                 </div>
             </div>
             <div class="row">
-                <footer class="text-center" id="footer">
-                    <p>Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
-                </footer>
+                <div class="span10 offset1">
+                    <footer class="text-center" id="footer">
+                        <p>Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
+                    </footer>
+                </div>
             </div>
         </div>
         <div id="offscreen">
