--- a/app/index.html
+++ b/app/index.html
@@ -24,33 +24,7 @@
     </head>
 
     <body>
-        <div class="container">
-            <div class="row">
-                <div class="span10 offset1">
-                    <header class="text-center" id="header">
-                        <h1>Three Aces</h1>
-                    </header>
-                </div>
-            </div>
-            <div class="row">
-                <div class="span3 offset1">
-                    <nav id="nav">
-                    </nav>
-                </div>
-                <div class="span7">
-                    <div id="main">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="span10 offset1">
-                    <footer class="text-center" id="footer">
-                        <p>Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
-                    </footer>
-                </div>
-            </div>
-        </div>
-        <div id="offscreen">
+        <div id="content">
         </div>
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
