made a proper home link and playing around with layouts

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
     </head>
 
     <body>
-        <div class="container" id="content">
+        <div class="container" id="container">
         </div>
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
