--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,33 @@
 
     <body>
         <div class="container" id="container">
+            <div class="row">
+                <div class="span12">
+                    <header id="header-region">
+                        <h1 class="text-center">Open Menu App</h1>
+                    </header>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span12">
+                    <article id="main-region">
+                        <!--
+                        <div id="loading">
+                            <img src="/images/ajax-loader.gif" />
+                        </div>
+                        -->
+                    </article>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span12">
+                    <footer id="footer-region">
+                        <p class="text-center">Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
+                    </footer>
+                </div>
+            </div>
+            <div class="modal hide" id="dialog-region">
+            </div>
         </div>
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
