added menu items module and updated to bootstrap3

--- a/app/index.html
+++ b/app/index.html
@@ -26,14 +26,14 @@
     <body>
         <div class="container" id="container">
             <div class="row">
-                <div class="span12">
+                <div class="col-md-12">
                     <header id="header-region">
                         <h1 class="text-center">Open Menu App</h1>
                     </header>
                 </div>
             </div>
             <div class="row">
-                <div class="span12">
+                <div class="col-md-12">
                     <article id="main-region">
                         <!--
                         <div id="loading">
@@ -44,13 +44,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="span12">
+                <div class="col-md-12">
                     <footer id="footer-region">
                         <p class="text-center">Built with <a href="https://github.com/mrichard/generator-marionette" target="_blank">generator-marionette</a></p>
                     </footer>
                 </div>
             </div>
-            <div class="modal hide" id="dialog-region">
+            <div id="dialog-region">
             </div>
         </div>
         <!-- build:js scripts/main.js -->
